Fix layout problem

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@
 
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
